# BT4BR-Final-Project

./: .gitignore  .gitmodules  .part  .versions  CMakeLists.txt  README.md  Report.docx  simulation.cpp  simulation.sln
c++_simulation/: CMakeLists.txt  LV_Phase  LV_Phase.py  LotkaVolterra.py  run.py  script.py  settings.json  simulation  simulation.cpp  simulation.vcxproj  simulation.vcxproj.filters
c++_simulation/classes/: Actor.cpp  Cell.cpp  FileUtils.cpp  Fox.cpp  Grass.cpp  GrassUtils.cpp  GrassUtils.h  Grid.cpp  Rabbit.cpp  RandomUtils.cpp  Tile.cpp  TileMap.cpp  Tile_old.cpp
c++_simulation/data/: data.csv  data_example.csv  settings_used.txt  settings_used_example.txt
c++_simulation/data/dataLotkaVolterra/: LV_Calc.py  data.csv  data2.csv  data3.csv  data4.csv
c++_simulation/data/settingsLotkaVolterra/: settings_used.txt  settings_used2.txt  settings_used3.txt  settings_used4.txt
c++_simulation/headers/: Actor.h  Cell.h  FileUtils.h  Fox.h  Grass.h  GrassColor.h  GrassUtils.h  Grid.h  Position.h  Rabbit.h  RandomUtils.h  Tile.h  TileMap.h  Tile_old.h  global_enums.h  settings.h
data/raw/: data.csv
python/: script.py
